Change approach to header to prevent wrapping

--- a/app/(root)/homepage.css
+++ b/app/(root)/homepage.css
@@ -13,8 +13,11 @@ main.main-container {
   background-color: var(--color-bg);
   z-index: 10;
   @media (min-width: 768px) {
-    padding: 2rem 0;
+    /* padding: 2rem 0; */
+    margin-top: 14vw;
   }
+
+  container-type: inline-size;
 }
 
 section#about {
