--- a/components/header.css
+++ b/components/header.css
@@ -3,11 +3,13 @@ header {
   top: 0;
   z-index: 1;
   width: 100%;
+  max-width: 100vw;
   padding: 1em;
+  overflow-x: visible;
   @media (min-width: 768px) {
     width: 600px;
-    max-width: 25vw;
-    min-width: 200px;
+    max-width: max(30vw, 360px);
+    min-width: 240px;
     height: 100vh;
   }
 
@@ -50,14 +52,16 @@ h1 {
   font-weight: 400;
   font-style: normal;
   margin: 0 0 0.25em 0;
-  font-size: clamp(2em, calc(1.5em + 3vw), 6em);
+  /* font-size: 12vw; */
   line-height: 0.95;
   cursor: pointer;
+  width: 100vw;
+  transform-origin: top left;
 }
 
 .tagline {
   font-weight: 450;
-  font-size: 1.375em;
+  font-size: clamp(1.125em, calc(1em + 1vw), 1.375em);
   letter-spacing: -0.01em;
   /* font-family: var(--font-mono); */
 }
