--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
 :root {
-  --color-emph: #171515;
+  --color-emph: #100e0e;
   --color-bg: #d5d3cb;
   --color-fg: #413c3c;
 }
